--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,12 @@ article {
 }
 
 h1 {
-    font-size: 10em;
+    font-size: 8em;
     text-align:s center;
     text-transform: uppercase;
 }
 
+/*First Frame*/
 .char1,
 .char9,
 .char15 {
@@ -21,18 +22,25 @@ h1 {
     box-shadow: inset 0 0 8px #fff;
     display: inline-block;
     padding: .25em;
-    border-bottom: 10 solid #fff;
+    border-bottom: 20px solid #fff;
+    
+    transition: transform .5s; 
 }
 
-.char1 {
+.char4 {
+    letter-spacing: -12px;
+}
+
+/*Last Frame*/
+.char1:hover {
     transform: rotate(5deg)scale(.75);
 }
 
-.char9 {
+.char9:hover {
     transform: rotate(15deg)scale(1.25);
 }
 
-.char15 {
+.char15:hover {
     transform: rotate(10deg);
 }
 
