added beyonce animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ h1 {
     text-transform: uppercase;
 }
 
+
 /*First Frame*/
 .char1,
 .char9,
@@ -31,6 +32,7 @@ h1 {
     letter-spacing: -12px;
 }
 
+
 /*Last Frame*/
 .char1:hover {
     transform: rotate(5deg)scale(.75);
@@ -42,6 +44,54 @@ h1 {
 
 .char15:hover {
     transform: rotate(10deg);
+}
+
+/*Keyframe Animation*/
+@keyframes rubberBand {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
+  }
+
+  65% {
+    -webkit-transform: scale3d(.95, 1.05, 1);
+    transform: scale3d(.95, 1.05, 1);
+  }
+
+  75% {
+    -webkit-transform: scale3d(1.05, .95, 1);
+    transform: scale3d(1.05, .95, 1);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.rubberBand {
+  -webkit-animation-name: rubberBand;
+  animation-name: rubberBand;
+}
+
+
+img:hover {
+    animation: rubberBand 1s infinite;
 }
 
 /********************
