--- a/css/styles.css
+++ b/css/styles.css
@@ -3,19 +3,30 @@ YOUR STYLES
 *******************/
 
 article {
-    background: grey;
     margin: 0 auto;
     padding: 3em;
 }
 
+body {
+    background: white;
+}
+
 h1 {
-    font-size: 8em;
-    text-align:s center;
+    background: white;
+    color: black;
+    font-size: 4em;
+    text-align: center;
     text-transform: uppercase;
 }
 
+p {
+    text-align: center;
+    height: 100px;
+    width: auto:
+}
 
 /*First Frame*/
+/*
 .char1,
 .char9,
 .char15 {
@@ -27,10 +38,7 @@ h1 {
     
     transition: transform .5s; 
 }
-
-.char4 {
-    letter-spacing: -12px;
-}
+*/
 
 
 /*Last Frame*/
