--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,11 @@ YOUR STYLES
 
 article {
     margin: 0 auto;
-    padding: 3em;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 h1 {
-    background: rgba(0,0,0,.5);
-    display: inline-block;
+    background: rgba(0, 0, 0, .5);
     margin: auto;
     padding: 1em;
     color: white;
@@ -18,111 +17,112 @@ h1 {
     text-transform: uppercase;
 }
 
+h2 {
+    color: gold;
+    text-transform: uppercase;
+    font-size: 2.5em;
+    text-align: center;
+}
+
+.me {
+    padding-top: 4em;
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+}
+
 body {
     margin: auto;
 }
 
-
 p {
-    background: rgba(225,225,225,.5);
-    margin: auto;
-    text-transform: uppercase;
+    padding: 1em;
     display: block;
-    padding-top: 1.7em;
-    padding-left: 1em;
-    padding-right: 1em;
-    font-size: 24px;
+    color: white;
+    font-size: 2em;
     text-align: center;
-    height: 100px;
-    width: auto;
+    margin-top: 40px;
 }
 
-h3 {
-    background: white;
-    padding: .5em;
+.links {
     text-align: center;
-    font-size: 2em;
-    text-transform: uppercase;
+    display: block;
+    margin: 0 auto;
+    list-style: none;
 }
 
 nav li {
     display: inline-block;
-   margin: auto;
+    margin: auto;
 }
+
 
 /* Starting Nav */
+
 nav a:link,
 nav a:visited {
-  background: rgba(34,139,34,.5);
-  color: white;
-  text-decoration: none;
-  padding: 1em;
-  transition: all .5s;
+    background: rgba(30, 144, 225, .5);
+    color: white;
+    text-decoration: none;
+    padding: 1em;
+    transition: all .5s;
 }
 
+
 /* Ending Nav */
+
 nav a:hover,
 nav a:active {
-  background: rgba(225,225,225,.25);
-  color: green;
-  margin-left: .5em;
+    background: rgba(225, 225, 225, .25);
+    color: dodgerblue;
+    margin-left: .5em;
 }
 
 ul {
-    background: rgba(225,225,225,.5);
-    padding: 2em;
+    padding: 1em;
 }
-
-
-
 
 
 /* Masonry Styles */
 
 main {
-  margin: 0 auto;
-  width: 50%;
+    display: block;
+    margin: 0 auto;
+    width: 50%;
 }
 
 section {
-  border: 5px solid rgba(225,225,225,1);
+    border: 5px solid rgba(225, 225, 225, 1);
     border-top-left-radius: 20%;
     border-bottom-right-radius: 20%;
-  margin-top: 2em;
-  margin-bottom: 1em;
-  display:inline-block;
-  width: 400px;
-  height: 300px;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    display: inline-block;
+    width: 400px;
+    height: 300px;
 }
 
 .venti {
-  height: 400px;
-  width: 200;
+    height: 400px;
+    width: 200;
 }
 
 
-
-
-
-
-
 /*First Frame*/
-/*
+
 .char1,
-.char9,
-.char15 {
+.char9 {
     background: orange;
     box-shadow: inset 0 0 8px #fff;
     display: inline-block;
     padding: .25em;
     border-bottom: 20px solid #fff;
-    
-    transition: transform .5s; 
+    transition: transform .5s;
 }
-*/
 
 
 /*Last Frame*/
+
 .char1:hover {
     transform: rotate(5deg)scale(.75);
 }
@@ -135,69 +135,65 @@ section {
     transform: rotate(10deg);
 }
 
+
 /*Keyframe Animation*/
+
 @keyframes rubberBand {
-  from {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-
-  30% {
-    -webkit-transform: scale3d(1.25, 0.75, 1);
-    transform: scale3d(1.25, 0.75, 1);
-  }
-
-  40% {
-    -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1);
-  }
-
-  50% {
-    -webkit-transform: scale3d(1.15, 0.85, 1);
-    transform: scale3d(1.15, 0.85, 1);
-  }
-
-  65% {
-    -webkit-transform: scale3d(.95, 1.05, 1);
-    transform: scale3d(.95, 1.05, 1);
-  }
-
-  75% {
-    -webkit-transform: scale3d(1.05, .95, 1);
-    transform: scale3d(1.05, .95, 1);
-  }
-
-  to {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
+    from {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+    30% {
+        -webkit-transform: scale3d(1.25, 0.75, 1);
+        transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+        -webkit-transform: scale3d(0.75, 1.25, 1);
+        transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+        -webkit-transform: scale3d(1.15, 0.85, 1);
+        transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+        -webkit-transform: scale3d(.95, 1.05, 1);
+        transform: scale3d(.95, 1.05, 1);
+    }
+    75% {
+        -webkit-transform: scale3d(1.05, .95, 1);
+        transform: scale3d(1.05, .95, 1);
+    }
+    to {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
 }
 
 .rubberBand {
-  -webkit-animation-name: rubberBand;
-  animation-name: rubberBand;
+    -webkit-animation-name: rubberBand;
+    animation-name: rubberBand;
 }
-
 
 article img:hover {
     animation: rubberBand 1s infinite;
 }
 
+
 /********************
 MEDIA QUERIES
 *******************/
 
+
 /* Desktop */
-@media (min-width: 1200px) {
-    
-}
+
+@media (min-width: 1200px) {}
+
 
 /* Tablet */
-@media (min-width: 768px) {
 
-}
+@media (min-width: 768px) {}
+
 
 /* Mobile */
-@media (min-width: 480px) {
 
-}
+@media (min-width: 480px) {}
