--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,11 @@ h2 {
 }
 
 .me {
+    width: 600px;
+    height: 600px;
     padding-top: 4em;
     display: block;
     margin: 0 auto;
-    border-radius: 50%;
 }
 
 body {
@@ -57,7 +58,14 @@ nav li {
 }
 
 
+img {
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
+    max-height: 400px;;
+    max-width: 400px;
 
+}
 
 
 
@@ -116,17 +124,15 @@ main {
 }
 
 section {
-    border: 5px solid rgba(225, 225, 225, 1);
-    border-top-left-radius: 20%;
-    border-bottom-right-radius: 20%;
     margin-top: 2em;
     margin-bottom: 1em;
-    display: inline-block;
+    display: block;
     width: 400px;
     height: 300px;
 }
 
 .venti {
+    object-fit: fill;
     height: 400px;
     width: 200;
 }
