--- a/css/styles.css
+++ b/css/styles.css
@@ -18,10 +18,21 @@ h1 {
 }
 
 h2 {
+    background: rgba(0,0,0,.5)
+    color: white;
+    padding: 1em;
+    text-transform: uppercase;
+    display: block;
+    text-align: center;
+}
+
+h3 {
     color: gold;
     text-transform: uppercase;
     font-size: 2.5em;
     text-align: center;
+}
+
 }
 
 .me {
@@ -271,17 +282,44 @@ li img:hover {
 MEDIA QUERIES
 *******************/
 
-
 /* Desktop */
+@media screen 
+  /* 2560px = 160em */
+  and (max-width: 160em)
+  /* 1280px = 80em */
+  and (min-width: 80em) { 
+  
+  /* Temporary Styling. Add your own. */
+  body {
+       background: blue;
+  }
 
-@media (min-width: 1200px) {}
-
+}
 
 /* Tablet */
+@media screen 
+   /* 1279 = 79.9375em */  
+  and (max-width: 79.9375em)
+   /* 768px = 160em */
+  and (min-width: 48em)  {
+  
+  /* Temporary Styling. Add your own. */
+  body {
+       background: green;
+  }
 
-@media (min-width: 768px) {}
-
+}
 
 /* Mobile */
-
-@media (min-width: 480px) {}
+@media screen
+  /* 767px = 47.9375em */
+  and (max-width: 47.9375em)
+  /* 320px = 20em */
+  and (min-width: 20em) { 
+  
+  /* Temporary Styling. Add your own. */
+  body {
+       background: red;
+  }
+  
+}
