--- a/css/styles.css
+++ b/css/styles.css
@@ -18,21 +18,18 @@ h1 {
 }
 
 h2 {
-    background: rgba(0,0,0,.5)
-    color: white;
-    padding: 1em;
-    text-transform: uppercase;
-    display: block;
-    text-align: center;
-}
-
-h3 {
     color: gold;
     text-transform: uppercase;
     font-size: 2.5em;
     text-align: center;
 }
 
+h3 {
+    font-size: 2em;
+    color: gold;
+    text-transform: uppercase;
+    display: block;
+    text-align: center;
 }
 
 .me {
